# pymefuw

./: .gitignore  README.md  compatibility.md  pyproject.toml
examples/: 01_upgrade_pvp6_1500.py
pymefuw/: __init__.py  main.py
pymefuw/terminal/: __init__.py  fuwhelper.py
pymeu_fuw/: main.py
tests/: fuw_test.py
